# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_04_26_074347) do
+ActiveRecord::Schema[8.0].define(version: 2025_04_26_081722) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -76,6 +76,7 @@ ActiveRecord::Schema[8.0].define(version: 2025_04_26_074347) do
     t.datetime "effective_date", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.boolean "is_required", default: true, null: false
     t.index ["kind", "version"], name: "index_policies_on_kind_and_version", unique: true
   end
 
